--- a/.github/workflows/v3-base-image-check.yml
+++ b/.github/workflows/v3-base-image-check.yml
@@ -35,7 +35,7 @@ jobs:
               # Trigger the build-and-push workflow
               curl -X POST \
               -H "Accept: application/vnd.github.everest-preview+json" \
-              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Authorization: Bearer ${{ secrets.PAT }}" \
               https://api.github.com/repos/owner/repo/dispatches \
               -d '{"event_type": "v3-build-and-push"}'
             fi
