--- a/.github/workflows/v4-base-image-check.yml
+++ b/.github/workflows/v4-base-image-check.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Get previous hash
         id: get_previous_hash
-        run: echo "PREVIOUS_HASH=$(cat dotnet_hash.txt)" >> $GITHUB_ENV || echo "PREVIOUS_HASH=" >> $GITHUB_ENV
+        run: echo "PREVIOUS_HASH=$(bb7e13e00580a3ff3f0dec4e60edcf18926434679a4bd96f3c195069fb720e4c)" >> $GITHUB_ENV || echo "PREVIOUS_HASH=" >> $GITHUB_ENV
 
       - name: Compare hashes
         id: compare_hashes
