--- a/.github/workflows/v4-base-image-check.yml
+++ b/.github/workflows/v4-base-image-check.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Get previous hash
         id: get_previous_hash
         run: |
-          PREVIOUS_HASH=$(cat upstream-releases/ubuntu_hash.txt)
+          PREVIOUS_HASH=$(cat upstream-releases/dotnet_hash.txt)
           echo "PREVIOUS_HASH=$PREVIOUS_HASH" >> $GITHUB_ENV || echo "PREVIOUS_HASH=" >> $GITHUB_ENV
 
       - name: Compare hashes
@@ -37,7 +37,7 @@ jobs:
               echo "Hashes match. No change detected."
             else
               echo "Hashes differ. There's a change in the image."
-              echo "${{ env.CURRENT_HASH }}" > dotnet_hash.txt
+              echo "${{ env.CURRENT_HASH }}" > upstream-releases/dotnet_hash.txt
               # Trigger the build-and-push workflow
               curl -X POST \
               -H "Accept: application/vnd.github.everest-preview+json" \
@@ -47,5 +47,5 @@ jobs:
             fi
           else
             echo "Previous hash not found. This is likely the first run."
-            echo "${{ env.CURRENT_HASH }}" > dotnet_hash.txt
+            echo "${{ env.CURRENT_HASH }}" > upstream-releases/dotnet_hash.txt
           fi
