--- a/.github/workflows/v4-base-image-check.yml
+++ b/.github/workflows/v4-base-image-check.yml
@@ -27,7 +27,7 @@ jobs:
         id: get_previous_hash
         run: |
           PREVIOUS_HASH=$(cat upstream-releases/dotnet_hash.txt)
-          echo "PREVIOUS_HASH=$PREVIOUS_HASH" >> $GITHUB_ENV || echo "PREVIOUS_HASH=" >> $GITHUB_ENV
+          echo "PREVIOUS_HASH=$PREVIOUS_HASH" >> $GITHUB_ENV
 
       - name: Compare hashes
         id: compare_hashes
