--- a/.github/workflows/v4-base-image-check.yml
+++ b/.github/workflows/v4-base-image-check.yml
@@ -26,14 +26,14 @@ jobs:
       - name: Get previous hash
         id: get_previous_hash
         run: |
-          PREVIOUS_HASH=$(cat upstream-releases/dotnet_hash.txt | tr -d '\n')
+          PREVIOUS_HASH=$(cat upstream-releases/dotnet_hash.txt)
           echo "PREVIOUS_HASH=$PREVIOUS_HASH" >> $GITHUB_ENV
 
       - name: Compare hashes
         id: compare_hashes
         run: |
-          if [ -n "$${{ env.PREVIOUS_HASH }}" ]; then
-            if [ "$${{ env.PREVIOUS_HASH }}" = "${{ env.CURRENT_HASH }}" ]; then
+          if [ -n "${{ env.PREVIOUS_HASH }}" ]; then
+            if [ "${{ env.PREVIOUS_HASH }}" = "${{ env.CURRENT_HASH }}" ]; then
               echo "Hashes match. No change detected."
             else
               echo "Hashes differ. There's a change in the image."
