Update workflow name

--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -1,4 +1,4 @@
-name: Check for new release
+name: Check for new CumulusMX release
 
 # This script runs on a schedule to check for new releases from the upstream repo. If it finds a new release writes the latest release number to a file. 
 # Credit to peterevans on stackoverflow for the script: https://stackoverflow.com/a/58468828
