Add repository trigger

--- a/.github/workflows/v4-container-build-push.yml
+++ b/.github/workflows/v4-container-build-push.yml
@@ -19,7 +19,7 @@ on:
 
   # Trigger from other workflows
   repository_dispatch:
-    types: [v4-build-and-push]
+    types: [v4_start_build]
 
 
 jobs:
