--- a/.github/workflows/v4-base-image-check.yml
+++ b/.github/workflows/v4-base-image-check.yml
@@ -39,6 +39,12 @@ jobs:
             else
               echo "Hashes differ. There's a change in the image."
               echo "${{ env.CURRENT_HASH }}" > upstream-releases/dotnet_hash.txt
+              # Trigger the build-and-push workflow
+              curl -X POST \
+              -H "Accept: application/vnd.github.everest-preview+json" \
+              -H "Authorization: Bearer ${{ secrets.PAT }}" \
+              https://api.github.com/repos/owner/repo/dispatches \
+              -d '{"event_type": "v4-start-build"}'
               echo "MODIFIED=true" >> $GITHUB_ENV
             fi
           else
