--- a/.github/workflows/v4-container-build-push.yml
+++ b/.github/workflows/v4-container-build-push.yml
@@ -3,11 +3,6 @@ name: v4 build and push
 # This workflow is triggered by an update to the upstream-releases file (which is triggered by the check-releases workflow).
 # When triggered the latest version of the container is built and pushed to docker hub
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 on:
   # Automatically trigger when upstream release file is changed
   #push:
@@ -40,7 +35,7 @@ jobs:
           echo "VERSION=$VER" >> $GITHUB_ENV
 
       - name: Check out the repo
-        id: checkout
+        id: checkout_repository
         uses: actions/checkout@v4
         
       - name: Set up QEMU
