--- a/.github/workflows/v4-base-image-check.yml
+++ b/.github/workflows/v4-base-image-check.yml
@@ -49,7 +49,7 @@ jobs:
               -H "Accept: application/vnd.github.everest-preview+json" \
               -H "Authorization: Bearer ${{ secrets.PAT }}" \
               https://api.github.com/repos/owner/repo/dispatches \
-              -d '{"event_type": "v4-start-build"}'
+              -d '{"event_type": "v4_start_build"}'
               echo "MODIFIED=true" >> $GITHUB_ENV
             fi
           else
