--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -41,10 +41,10 @@ jobs:
               echo "${{ env.NEW_VERSION }}" > upstream-releases/cumulusmx-latest.txt
               # Trigger the build-and-push workflow
               curl -X POST \
-              -H "Accept: application/vnd.github.everest-preview+json" \
-              -H "Authorization: Bearer ${{ secrets.PAT }}" \
-              https://api.github.com/repos/owner/repo/dispatches \
-              -d '{"event_type": "v4-build-and-push"}'
+              -H "Accept: application/vnd.github.v3+json" \
+              -H "Authorization: token ${{ secrets.PAT }}" \
+              https://api.github.com/repos/hucknz/cumulusmx/actions/workflows/v4-container-build-push.yml/dispatches \
+              -d '{"ref":"main"}'
               echo "MODIFIED=true" >> $GITHUB_ENV
             fi
           fi
