--- a/.github/workflows/v4-base-image-check.yml
+++ b/.github/workflows/v4-base-image-check.yml
@@ -46,10 +46,10 @@ jobs:
               echo "${{ env.CURRENT_HASH }}" > upstream-releases/dotnet_hash.txt
               # Trigger the build-and-push workflow
               curl -X POST \
-              -H "Accept: application/vnd.github.everest-preview+json" \
-              -H "Authorization: Bearer ${{ secrets.PAT }}" \
-              https://api.github.com/repos/owner/repo/dispatches \
-              -d '{"event_type": "v4_start_build"}'
+              -H "Accept: application/vnd.github.v3+json" \
+              -H "Authorization: token ${{ secrets.PAT }}" \
+              https://api.github.com/repos/hucknz/cumulusmx/actions/workflows/v4-container-build-push.yml/dispatches \
+              -d '{"ref":"main"}'
               echo "MODIFIED=true" >> $GITHUB_ENV
             fi
           else
