Update slack messages

--- a/.github/workflows/v3-base-image-check.yml
+++ b/.github/workflows/v3-base-image-check.yml
@@ -65,11 +65,20 @@ jobs:
           git commit -am "New Ubuntu hash found"
           git push
 
-      - name: Notify outcome to Slack
-        id: notify_result
+        - name: Notify new image found to Slack
+        id: notify_new_image
+        if: env.MODIFIED == 'true'
         uses: act10ns/slack@v2
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
-          message: Ubuntu base image check was a ${{ job.status }}
-        if: always()
+          message: "A new Ubuntu base image was found. The build and push workflow has been triggered."
+  
+        - name: Notify failure to Slack
+          id: notify_failure
+          if: failure()
+          uses: act10ns/slack@v2
+          with:
+            status: ${{ job.status }}
+            steps: ${{ toJson(steps) }}
+            message: "Ubuntu base image check was a ${{ job.status }}"
