--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.4"
 services:
   cumulusmx:
     container_name: cumulusmx
-    image: hucknz/cumulusmx
+    image: hucknz/cumulusmx:v4
     restart: unless-stopped
     environment:
       - PUID=${PUID}
