--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -13,6 +13,9 @@ on:
 jobs:
   get-version:
     runs-on: ubuntu-latest
+    env:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
     steps:
 
       - uses: actions/checkout@v4
@@ -57,3 +60,20 @@ jobs:
           git commit -am "New release version found"
           git push
   
+      - name: Notify new image found to Slack
+        id: notify_new_release
+        if: env.MODIFIED == 'true'
+        uses: act10ns/slack@v2
+        with:
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+          message: "A new Uptime Kuma version was found. The build and push workflow has been triggered."
+      
+      - name: Notify failure to Slack
+        id: notify_failure
+        if: failure()
+        uses: act10ns/slack@v2
+        with:
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+          message: "Uptime Kuma release check was a ${{ job.status }}"
