--- a/.github/workflows/v3-beta-container-build-push.yml
+++ b/.github/workflows/v3-beta-container-build-push.yml
@@ -59,7 +59,7 @@ jobs:
         id: build_images
         uses: docker/build-push-action@v5
         with:
-          context: v3
+          context: v3-beta
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.extract_metadata.outputs.tags }}
