--- a/v3-beta/Dockerfile
+++ b/v3-beta/Dockerfile
@@ -14,7 +14,7 @@ SHELL ["/bin/bash", "-c"]
 # Install packages, configure packages then download and install CumulusMX
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-    nginx mono-complete curl tzdata unzip libudev-dev git python3-virtualenv ca-certificates && \
+    nginx mono-complete curl tzdata unzip libudev-dev && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
     echo "\ndaemon off;" >> /etc/nginx/nginx.conf && \
